2009-09-01  Mike Krüger  <mkrueger@novell.com>

	* DockItem.cs: If the DockItem status is AutoHide always give
	  focus on Present (bool giveFocus).

2009-09-01  Lluis Sanchez Gual  <lluis@novell.com>

	* DockItem.cs: Fire the ContentRequired event only when the
	  content is really required, that is, when it is going to be
	  shown. It won't be fired for example, if the pad is selected
	  but not visible in a notebook.

2009-08-27  Mike Krüger  <mkrueger@novell.com>

	* TabStrip.cs:
	* DockItemContainer.cs: Fixed warnings.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Dock.csproj: Updated dependencies. We now depend
	  on gtk# 2.12.8, Mono 2.4, and Mono.Addins 0.4.

2009-07-21  Lluis Sanchez Gual  <lluis@novell.com>

	* DockContainer.cs: Fix potential crash. The notebook list
	  might be navigated after unparenting the child, so the child
	  must be removed first.

2009-07-21  Lluis Sanchez Gual  <lluis@novell.com>

	* DockItem.cs:
	* DockFrame.cs:
	* DockItemContainer.cs: Fix some size allocation warnings,
	  caused by negative widths.

2009-06-19  Mike Krüger  <mkrueger@novell.com>

	* AssemblyInfo.cs: Commented out empty assembly key file
	  attribute (Bug 513981 - Project template causes CS1726
	  errors).

2009-05-22  Lluis Sanchez Gual  <lluis@novell.com>

	* TabStrip.cs: Draw a small drop shadow below the tabs.

2009-05-22  Lluis Sanchez Gual  <lluis@novell.com>

	* TabStrip.cs:
	* DockFrame.cs:
	* DockItemContainer.cs: Improve look of pad tabs on windows.

2009-05-22  Lluis Sanchez Gual  <lluis@novell.com>

	* DockFrame.cs: Reduce spacing.

	* Makefile.am:
	* DockItemContainer.cs:
	* MonoDevelop.Dock.csproj: Add some gradients. Disable drawing
	  of tab gap.

2009-05-22  Lluis Sanchez Gual  <lluis@novell.com>

	* TabStrip.cs:
	* DockItemContainer.cs: Use a custom frame instead of
	  Gtk.Frame. This frame always draws a 1-pixel border. The
	  border is not drawn if below it there is a tab. Reduced the
	  padding used in tabs.
